plugins {
    id 'java'
    id 'jacoco'
}

group = 'com.waldou.chip8'
version = '1.0-SNAPSHOT'

jacoco {
    toolVersion = '0.8.15'
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.1.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'org.mockito:mockito-junit-jupiter:5.23.0'

    testImplementation 'org.awaitility:awaitility:4.3.0'
}

test {
    maxHeapSize = "2048m"
    useJUnitPlatform()
    jvmArgs '-Xshare:off'
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
    jacocoTestReport {
        afterEvaluate {
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(
                        dir: it,
                        exclude: []
                )
            }))
        }
    }
    dependsOn test
    finalizedBy jacocoTestCoverageVerification
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.5
            }
        }
    }
}

tasks.register('coverage') {
    dependsOn 'jacocoTestReport'
}

jar {
    manifest {
        attributes 'Main-Class': 'com.waldou.chip8.Main'
    }
}
